--- a/index.html
+++ b/index.html
@@ -219,21 +219,21 @@
                 <div class="icon-box">
                   <a href="#" class="social-network">
                     <svg class="social-icon">
-                      <use href="/sprite.svg#twitter-icon" />
+                      <use href="sprite.svg#twitter-icon" />
                     </svg>
                   </a>
                 </div>
                 <div class="icon-box">
                   <a href="#" class="social-network">
                     <svg class="social-icon">
-                      <use href="/sprite.svg#linkedin-icon" />
+                      <use href="sprite.svg#linkedin-icon" />
                     </svg>
                   </a>
                 </div>
                 <div class="icon-box">
                   <a href="#" class="social-network">
                     <svg class="social-icon">
-                      <use href="/sprite.svg#mail-icon" />
+                      <use href="sprite.svg#mail-icon" />
                     </svg>
                   </a>
                 </div>
@@ -259,21 +259,21 @@
                 <div class="icon-box">
                   <a href="#" class="social-network">
                     <svg class="social-icon">
-                      <use href="/sprite.svg#twitter-icon" />
+                      <use href="sprite.svg#twitter-icon" />
                     </svg>
                   </a>
                 </div>
                 <div class="icon-box">
                   <a href="#" class="social-network">
                     <svg class="social-icon">
-                      <use href="/sprite.svg#linkedin-icon" />
+                      <use href="sprite.svg#linkedin-icon" />
                     </svg>
                   </a>
                 </div>
                 <div class="icon-box">
                   <a href="#" class="social-network">
                     <svg class="social-icon">
-                      <use href="/sprite.svg#mail-icon" />
+                      <use href="sprite.svg#mail-icon" />
                     </svg>
                   </a>
                 </div>
@@ -299,35 +299,35 @@
                 <div class="icon-box">
                   <a href="#" class="social-network">
                     <svg class="social-icon">
-                      <use href="/sprite.svg#instagram-icon" />
+                      <use href="sprite.svg#instagram-icon" />
                     </svg>
                   </a>
                 </div>
                 <div class="icon-box">
                   <a href="#" class="social-network">
                     <svg class="social-icon">
-                      <use href="/sprite.svg#twitter-icon" />
+                      <use href="sprite.svg#twitter-icon" />
                     </svg>
                   </a>
                 </div>
                 <div class="icon-box">
                   <a href="#" class="social-network">
                     <svg class="social-icon">
-                      <use href="/sprite.svg#behance-icon" />
+                      <use href="sprite.svg#behance-icon" />
                     </svg>
                   </a>
                 </div>
                 <div class="icon-box">
                   <a href="#" class="social-network">
                     <svg class="social-icon">
-                      <use href="/sprite.svg#bool-icon" />
+                      <use href="sprite.svg#bool-icon" />
                     </svg>
                   </a>
                 </div>
                 <div class="icon-box">
                   <a href="#" class="social-network">
                     <svg class="social-icon">
-                      <use href="/sprite.svg#mail-icon"></use>
+                      <use href="sprite.svg#mail-icon"></use>
                     </svg>
                   </a>
                 </div>
@@ -353,21 +353,21 @@
                 <div class="icon-box">
                   <a href="#" class="social-network">
                     <svg class="social-icon">
-                      <use href="/sprite.svg#facebook-icon" />
+                      <use href="sprite.svg#facebook-icon" />
                     </svg>
                   </a>
                 </div>
                 <div class="icon-box">
                   <a href="#" class="social-network">
                     <svg class="social-icon">
-                      <use href="/sprite.svg#twitter-icon" />
+                      <use href="sprite.svg#twitter-icon" />
                     </svg>
                   </a>
                 </div>
                 <div class="icon-box">
                   <a href="#" class="social-network">
                     <svg class="social-icon">
-                      <use href="/sprite.svg#mail-icon" />
+                      <use href="sprite.svg#mail-icon" />
                     </svg>
                   </a>
                 </div>
@@ -379,7 +379,7 @@
       <section class="section-6">
         <div class="section-6-header-icon">
           <svg>
-            <use href="/sprite.svg#coma-icon" />
+            <use href="sprite.svg#coma-icon" />
           </svg>
         </div>
         <div class="section-6-border-line"></div>
@@ -391,7 +391,7 @@
               to anyone.”
             </div>
             <div class="section-6-people-img">
-              <img src="/images/people2.png" alt="people2" />
+              <img src="./images/people2.png" alt="people2" />
             </div>
             <div class="section-6-people-name">Julius Von Uberstien</div>
           </div>
@@ -400,7 +400,7 @@
               "Elexis Corp. has grown immensely with the help of Minimal.”
             </div>
             <div class="section-6-people-img">
-              <img src="/images/people1.png" alt="people1" />
+              <img src="./images/people1.png" alt="people1" />
             </div>
             <div class="section-6-people-name">Rachel Stamos</div>
           </div>
@@ -448,13 +448,13 @@
               <div>
                 <a href="#">
                   <svg class="section-7-icon-svg" height="14px" width="14px">
-                    <use href="/sprite.svg#facebook-icon" /></svg></a
+                    <use href="sprite.svg#facebook-icon" /></svg></a
                 ><span class="section-7-text-content">Facebook</span>
               </div>
               <div>
                 <a href="#">
                   <svg class="section-7-icon-svg" width="14px" height="14px">
-                    <use href="/sprite.svg#twitter-icon" />
+                    <use href="sprite.svg#twitter-icon" />
                   </svg> </a
                 ><span class="section-7-text-content">Twitter</span>
               </div>
