--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 <div class="icon-box">
                   <a href="#" class="social-network">
                     <svg class="social-icon">
-                      <use href="sprite.svg#twitter-icon" />
+                      <use href="../sprite.svg#twitter-icon" />
                     </svg>
                   </a>
                 </div>
