--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
               "Elexis Corp. has grown immensely with the help of Minimal.”
             </div>
             <div class="section-6-people-img">
-              <img src="./images/people1.png" alt="people1" />
+              <img src="../images/people1.png" alt="people1" />
             </div>
             <div class="section-6-people-name">Rachel Stamos</div>
           </div>
