--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 <div class="icon-box">
                   <a href="#" class="social-network">
                     <svg class="social-icon">
-                      <use href="../sprite.svg#twitter-icon" />
+                      <use href="sprite.svg#twitter-icon" />
                     </svg>
                   </a>
                 </div>
@@ -400,7 +400,7 @@
               "Elexis Corp. has grown immensely with the help of Minimal.”
             </div>
             <div class="section-6-people-img">
-              <img src="../images/people1.png" alt="people1" />
+              <img src="./images/people1.png" alt="people1" />
             </div>
             <div class="section-6-people-name">Rachel Stamos</div>
           </div>
